--- a/oracleRexBackend/frontend/static/css/style.css
+++ b/oracleRexBackend/frontend/static/css/style.css
@@ -106,77 +106,94 @@ button:hover {
     margin: 20px 0;
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: 90vh;
+}
+
+.grid-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hex-grid {
     position: relative;
-    width: 80vw; /* 80% of viewport width */
-    height: 90vh; /* 90% of viewport height */
-    max-width: 1200px; /* Cap at original size */
-    max-height: 1100px; /* Cap at original size */
-    margin: 0 auto; /* Center the grid */
+    width: 80vw;
+    height: 90vh;
+    max-width: 1200px;
+    max-height: 1100px;
+    margin: 0 auto;
+    font-size: 6.5vw;
 }
 
 .hex {
-    font-size: 6.5vw;
+    font-size: inherit;
     position: absolute;
     width: var(--hex-grid-width);
     height: var(--hex-grid-height);
     background: #ddd;
-    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%); /* Flat-bottom */
-    &.mecatol {
-        background: #aaa;
-    }
-    &.inner {
-        background: #bbb;
-    }
-    &.middle {
-        background: #ccc;
-    }
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+}
+
+.hex.mecatol {
+    background: #aaa;
+}
+.hex.inner {
+    background: #bbb;
+}
+.hex.middle {
+    background: #ccc;
 }
 
 
 
-/* Center: Mecatol Rex */
-.hex[data-position="0-0"] { top: 0em; left: 0em; } /* 500px/1100, 550px/1200 */
+/* Center adjustment: Offset all positions to center Mecatol Rex */
+.hex[data-position="0-0"] {
+    top: calc(50% - (var(--hex-grid-height) / 2));
+    left: calc(50% - (var(--hex-grid-width) / 2));
+}
+
 /* Inner Ring */
-.hex[data-position="1-4"] { top: var(--hex-grid-vert-up); left: 0em; }
-.hex[data-position="2-4"] { top: var(--hex-grid-vert-angle-up); left: var(--hex-grid-horz); }
-.hex[data-position="3-4"] { top: var(--hex-grid-vert-angle); left: var(--hex-grid-horz); }
-.hex[data-position="4-4"] { top: var(--hex-grid-vert); left: 0em; }
-.hex[data-position="5-4"] { top: var(--hex-grid-vert-angle-up); left: var(--hex-grid-horz-left); }
-.hex[data-position="6-4"] { top: var(--hex-grid-vert-angle); left: var(--hex-grid-horz-left); }
+.hex[data-position="1-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-up)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="2-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle-up)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
+.hex[data-position="3-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
+.hex[data-position="4-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="5-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle-up)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
+.hex[data-position="6-4"] { top: calc(50% - (var(--hex-grid-vert-angle)) + (var(--hex-grid-height) / 2)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 
-/* Middle Ring (Ring 2: 12 tiles, 30° apart) */
-.hex[data-position="1-1"] { top: calc(var(--hex-grid-vert-up)*2); left: 0em; }
-.hex[data-position="1-3"] { top: calc(var(--hex-grid-vert-angle-up)*3); left: var(--hex-grid-horz); }
-.hex[data-position="2-1"] { top: calc(var(--hex-grid-vert-angle-up)*2); left: calc(var(--hex-grid-horz)*2); }
-.hex[data-position="2-3"] { top: 0em; left: calc(var(--hex-grid-horz)*2); }
-.hex[data-position="3-1"] { top: calc(var(--hex-grid-vert-angle)*2); left: calc(var(--hex-grid-horz)*2); }
-.hex[data-position="3-3"] { top: calc(var(--hex-grid-vert-angle)*3); left: var(--hex-grid-horz); }
-.hex[data-position="4-1"] { top: calc(var(--hex-grid-vert)*2); left: 0em; }
-.hex[data-position="4-3"] { top: calc(var(--hex-grid-vert-angle)*3); left: var(--hex-grid-horz-left); }
-.hex[data-position="5-1"] { top: calc(var(--hex-grid-vert-angle)*2); left: calc(var(--hex-grid-horz-left)*2); }
-.hex[data-position="5-3"] { top: 0em; left: calc(var(--hex-grid-horz-left)*2); }
-.hex[data-position="6-1"] { top: calc(var(--hex-grid-vert-angle-up)*2); left: calc(var(--hex-grid-horz-left)*2); }
-.hex[data-position="6-3"] { top: calc(var(--hex-grid-vert-angle-up)*3); left: var(--hex-grid-horz-left); }
+/* Middle Ring */
+.hex[data-position="1-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="1-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
+.hex[data-position="2-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
+.hex[data-position="2-3"] { top: calc(50% - (var(--hex-grid-height) / 2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
+.hex[data-position="3-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
+.hex[data-position="3-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
+.hex[data-position="4-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="4-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
+.hex[data-position="5-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
+.hex[data-position="5-3"] { top: calc(50% - (var(--hex-grid-height) / 2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
+.hex[data-position="6-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
+.hex[data-position="6-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 
-/* Outer Ring (Ring 3: 18 tiles, 20° apart) */
-.hex[data-position="1"] { top: calc(var(--hex-grid-vert-up)*3); left: 0em; }
-.hex[data-position="1-0"] { top: calc(var(--hex-grid-vert-angle-up)*5); left: var(--hex-grid-horz); }
-.hex[data-position="2-2"] { top: calc(var(--hex-grid-vert-up)*2); left: calc(var(--hex-grid-horz)*2); }
-.hex[data-position="2"] { top: calc(var(--hex-grid-vert-angle-up)*3); left: calc(var(--hex-grid-horz)*3); }
-.hex[data-position="2-0"] { top: var(--hex-grid-vert-angle-up); left: calc(var(--hex-grid-horz)*3); }
-.hex[data-position="3-2"] { top: var(--hex-grid-vert-angle); left: calc(var(--hex-grid-horz)*3); }
-.hex[data-position="3"] { top: calc(var(--hex-grid-vert-angle)*3); left: calc(var(--hex-grid-horz)*3); }
-.hex[data-position="3-0"] { top: calc(var(--hex-grid-vert)*2); left: calc(var(--hex-grid-horz)*2); }
-.hex[data-position="4-2"] { top: calc(var(--hex-grid-vert-angle)*5); left: var(--hex-grid-horz); }
-.hex[data-position="4"] { top: calc(var(--hex-grid-vert)*3); left: 0em; }
-.hex[data-position="4-0"] { top: calc(var(--hex-grid-vert-angle)*5); left: var(--hex-grid-horz-left); }
-.hex[data-position="5-2"] { top: calc(var(--hex-grid-vert)*2); left: calc(var(--hex-grid-horz-left)*2); }
-.hex[data-position="5"] { top: calc(var(--hex-grid-vert-angle)*3); left: calc(var(--hex-grid-horz-left)*3); }
-.hex[data-position="5-0"] { top: var(--hex-grid-vert-angle); left: calc(var(--hex-grid-horz-left)*3); }
-.hex[data-position="6-2"] { top: var(--hex-grid-vert-angle-up); left: calc(var(--hex-grid-horz-left)*3); }
-.hex[data-position="6"] { top: calc(var(--hex-grid-vert-angle-up)*3); left: calc(var(--hex-grid-horz-left)*3); }
-.hex[data-position="6-0"] { top: calc(var(--hex-grid-vert-up)*2); left: calc(var(--hex-grid-horz-left)*2); }
-.hex[data-position="1-2"] { top: calc(var(--hex-grid-vert-angle-up)*5); left: var(--hex-grid-horz-left); }
+/* Outer Ring */
+.hex[data-position="1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="1-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
+.hex[data-position="2-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
+.hex[data-position="2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*3)); }
+.hex[data-position="2-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle-up)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*3)); }
+.hex[data-position="3-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*3)); }
+.hex[data-position="3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*3)); }
+.hex[data-position="3-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
+.hex[data-position="4-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
+.hex[data-position="4"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*3)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="4-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
+.hex[data-position="5-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
+.hex[data-position="5"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*3)); }
+.hex[data-position="5-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*3)); }
+.hex[data-position="6-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle-up)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*3)); }
+.hex[data-position="6"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*3)); }
+.hex[data-position="6-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
+.hex[data-position="1-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
