--- a/oracleRexBackend/frontend/static/css/style.css
+++ b/oracleRexBackend/frontend/static/css/style.css
@@ -7,6 +7,8 @@
     --hex-grid-vert-angle: calc((var(--hex-grid-vert)/2));
     --hex-grid-vert-angle-up: calc((var(--hex-grid-vert-angle)*-1));
     --hex-grid-horz-left: calc((var(--hex-grid-horz)*-1));
+    --hex-grid-center-top: calc(50% - (var(--hex-grid-height) / 2));
+    --hex-grid-center-left: calc(50% - (var(--hex-grid-width) / 2));
 }
 
 body {
@@ -152,34 +154,35 @@ button:hover {
 
 /* Center adjustment: Offset all positions to center Mecatol Rex */
 .hex[data-position="0-0"] {
-    top: calc(50% - (var(--hex-grid-height) / 2));
-    left: calc(50% - (var(--hex-grid-width) / 2));
+    top: var(--hex-grid-center-top);
+    left: var(--hex-grid-center-left);
 }
 
+/*TODO: Simplify these settings*/
 /* Inner Ring */
-.hex[data-position="1-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-up)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="1-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-up)); left: var(--hex-grid-center-left); }
 .hex[data-position="2-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle-up)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
 .hex[data-position="3-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
-.hex[data-position="4-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="4-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert)); left: var(--hex-grid-center-left); }
 .hex[data-position="5-4"] { top: calc(50% - (var(--hex-grid-height) / 2) + var(--hex-grid-vert-angle-up)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 .hex[data-position="6-4"] { top: calc(50% - (var(--hex-grid-vert-angle)) + (var(--hex-grid-height) / 2)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 
 /* Middle Ring */
-.hex[data-position="1-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="1-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*2)); left: var(--hex-grid-center-left); }
 .hex[data-position="1-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
 .hex[data-position="2-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
-.hex[data-position="2-3"] { top: calc(50% - (var(--hex-grid-height) / 2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
+.hex[data-position="2-3"] { top: var(--hex-grid-center-top); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
 .hex[data-position="3-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
 .hex[data-position="3-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
-.hex[data-position="4-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="4-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: var(--hex-grid-center-left); }
 .hex[data-position="4-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 .hex[data-position="5-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
-.hex[data-position="5-3"] { top: calc(50% - (var(--hex-grid-height) / 2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
+.hex[data-position="5-3"] { top: var(--hex-grid-center-top); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
 .hex[data-position="6-1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
 .hex[data-position="6-3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 
 /* Outer Ring */
-.hex[data-position="1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="1"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*3)); left: var(--hex-grid-center-left); }
 .hex[data-position="1-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
 .hex[data-position="2-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-up)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
 .hex[data-position="2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle-up)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*3)); }
@@ -188,7 +191,7 @@ button:hover {
 .hex[data-position="3"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*3)); }
 .hex[data-position="3-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz)*2)); }
 .hex[data-position="4-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz)); }
-.hex[data-position="4"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*3)); left: calc(50% - (var(--hex-grid-width) / 2)); }
+.hex[data-position="4"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*3)); left: var(--hex-grid-center-left); }
 .hex[data-position="4-0"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*5)); left: calc(50% - (var(--hex-grid-width) / 2) + var(--hex-grid-horz-left)); }
 .hex[data-position="5-2"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert)*2)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*2)); }
 .hex[data-position="5"] { top: calc(50% - (var(--hex-grid-height) / 2) + calc(var(--hex-grid-vert-angle)*3)); left: calc(50% - (var(--hex-grid-width) / 2) + calc(var(--hex-grid-horz-left)*3)); }
