--- a/oracleRexBackend/frontend/static/css/style.css
+++ b/oracleRexBackend/frontend/static/css/style.css
@@ -145,6 +145,11 @@ button:disabled {
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
 }
 
+.hex:hover {
+    transform:scale(1.5);
+    z-index: 9999 !important;
+ }
+
 .hex.mecatol {
     background: #aaa;
 }
