Added two new tabs: Fleet Manager and Move Suggester. Both are currently skeletons except that fleet manager has a working TTS Input. This required some work on the front end to differentiate the different tab content. Added icons for units that will be used in the fleet manager and move suggester. Updated the player object to have a foreign key to faction instead of one-to-one, allowing multiple player objects from different game objects to share the single-source list of factions. New migration file made for this change.

--- a/oracleRexBackend/frontend/static/css/style.css
+++ b/oracleRexBackend/frontend/static/css/style.css
@@ -101,7 +101,15 @@ button:disabled {
     margin-bottom: 15px;
 }
 
-#tts-input {
+#tts-input-strategy {
+    flex-grow: 1;
+    padding: 10px;
+    margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#tts-input-fleet {
     flex-grow: 1;
     padding: 10px;
     margin-right: 10px;
