Altered the suggestStrategy method so that it can be used for the move suggester as well.

--- a/oracleRexBackend/frontend/templates/index.html
+++ b/oracleRexBackend/frontend/templates/index.html
@@ -39,7 +39,7 @@
             <select id="faction-select strategy" class="faction-select" disabled>
                 <option value="" selected>Enter a TTS String to load a board state</option>
             </select>
-            <button id="get-strategy-btn strategy" onclick="suggestStrategy()" disabled>Get Strategy</button>
+            <button id="get-strategy-btn strategy" onclick="suggestStrategy('strategy')" disabled>Get Strategy</button>
             <div id="board-preview" class="board-preview">
                 <div class="grid-wrapper">
                     <div class="hex-grid strategy">
@@ -153,7 +153,7 @@
             <select id="faction-select move" disabled>
                 <option value="" selected>Create a board state in the Fleet Manager</option>
             </select>
-            <button id="get-strategy-btn move" disabled>Suggest Move</button>
+            <button id="get-strategy-btn move" onclick="suggestStrategy('strategy')" disabled>Suggest Move</button>
             <div id="board-preview move" class="board-preview">
                 <div class="grid-wrapper">
                     <div class="hex-grid move">
