Added the ai move suggestion function.

--- a/oracleRexBackend/frontend/templates/index.html
+++ b/oracleRexBackend/frontend/templates/index.html
@@ -153,7 +153,7 @@
             <select id="faction-select move" disabled>
                 <option value="" selected>Create a board state in the Fleet Manager</option>
             </select>
-            <button id="get-strategy-btn move" onclick="suggestStrategy('strategy')" disabled>Suggest Move</button>
+            <button id="get-strategy-btn move" onclick="suggestStrategy('move')" disabled>Suggest Move</button>
             <div id="board-preview move" class="board-preview">
                 <div class="grid-wrapper">
                     <div class="hex-grid move">
