Broke out some non-common javascript out into separate files.

--- a/frontend/templates/rules.html
+++ b/frontend/templates/rules.html
@@ -5,4 +5,5 @@
               placeholder="Ask a rules question (e.g., Can I move a carrier two tiles?)"></textarea>
     <button onclick="askRules()">Ask Oracle Rex</button>
     <div id="rules-answer" class="response-box"></div>
+    <script src="static/js/rules.js"></script>
 </div>
