Added the skeleton for the fleet manager tool window. On the fleet manager tab only, hexes that are clicked (only if a TTS string is loaded) will remain zoomed in, and the tool window will appear on the user's cursor.

--- a/frontend/templates/fleet.html
+++ b/frontend/templates/fleet.html
@@ -52,7 +52,14 @@
                 <div class="hex" data-position="6"></div>
                 <div class="hex" data-position="6-0"></div>
                 <div class="hex" data-position="1-2"></div>
+
+                <div id="fleet-management-window" class="fleet-management-window" style="display: none;">
+                    <span>Fleet Management Window (Controls to be added)</span>
+                    <button id="fleet-management-window-close" onclick="closeFleetManagerWindow()">Close</button>
+                </div>
             </div>
         </div>
     </div>
+    <link rel="stylesheet" href="static/css/fleet_manager.css">
+    <script src="static/js/fleet_manager.js"></script>
 </div>
