--- a/frontend/templates/fleet.html
+++ b/frontend/templates/fleet.html
@@ -54,7 +54,7 @@
                 <div class="hex" data-position="1-2"></div>
 
                 <div id="fleet-management-window" class="fleet-management-window" style="display: none;">
-                    <span>Fleet Management Window (Controls to be added)</span>
+                    <span class="fleet-mgmt-header">Fleet Management</span>
                     <button id="fleet-management-window-close" onclick="closeFleetManagerWindow()">Close</button>
                 </div>
             </div>
