Broke the fleet management window into its own html and added the base for editing fleet counts.

--- a/frontend/templates/fleet.html
+++ b/frontend/templates/fleet.html
@@ -53,10 +53,7 @@
                 <div class="hex" data-position="6-0"></div>
                 <div class="hex" data-position="1-2"></div>
 
-                <div id="fleet-management-window" class="fleet-management-window" style="display: none;">
-                    <span class="fleet-mgmt-header">Fleet Management</span>
-                    <button id="fleet-management-window-close" onclick="closeFleetManagerWindow()">Close</button>
-                </div>
+                {% include 'fleet_mgmt.html' %}
             </div>
         </div>
     </div>
