Count for ships now increments properly in each system and state is saved.

--- a/frontend/templates/fleet_mgmt.html
+++ b/frontend/templates/fleet_mgmt.html
@@ -11,7 +11,7 @@
                     <button class="arrow up" data-unit="fighter">▲</button>
                     <button class="arrow down" data-unit="fighter">▼</button>
                 </div>
-                <span class="unit-count" id="fighter-count">0</span>
+                <span class="unit-count" id="fleet-fighter-count">0</span>
             </div>
             <div class="unit-row" data-unit="destroyer">
                 <span class="unit-icon"><img src="/static/images/ships/destroyer_icon.png" class="ship-icon"
@@ -20,7 +20,7 @@
                     <button class="arrow up" data-unit="destroyer">▲</button>
                     <button class="arrow down" data-unit="destroyer">▼</button>
                 </div>
-                <span class="unit-count" id="destroyer-count">0</span>
+                <span class="unit-count" id="fleet-destroyer-count">0</span>
             </div>
             <div class="unit-row" data-unit="cruiser">
                 <span class="unit-icon"><img src="/static/images/ships/cruiser_icon.png" class="ship-icon"
@@ -29,7 +29,7 @@
                     <button class="arrow up" data-unit="cruiser">▲</button>
                     <button class="arrow down" data-unit="cruiser">▼</button>
                 </div>
-                <span class="unit-count" id="cruiser-count">0</span>
+                <span class="unit-count" id="fleet-cruiser-count">0</span>
             </div>
             <div class="unit-row" data-unit="carrier">
                 <span class="unit-icon"><img src="/static/images/ships/carrier_icon.png" class="ship-icon"
@@ -38,7 +38,7 @@
                     <button class="arrow up" data-unit="carrier">▲</button>
                     <button class="arrow down" data-unit="carrier">▼</button>
                 </div>
-                <span class="unit-count" id="carrier-count">0</span>
+                <span class="unit-count" id="fleet-carrier-count">0</span>
             </div>
             <div class="unit-row" data-unit="dreadnought">
                 <span class="unit-icon"><img src="/static/images/ships/dread_icon.png" class="ship-icon"
@@ -47,7 +47,7 @@
                     <button class="arrow up" data-unit="dreadnought">▲</button>
                     <button class="arrow down" data-unit="dreadnought">▼</button>
                 </div>
-                <span class="unit-count" id="dreadnought-count">0</span>
+                <span class="unit-count" id="fleet-dreadnought-count">0</span>
             </div>
             <div class="unit-row" data-unit="war_sun">
                 <span class="unit-icon"><img src="/static/images/ships/war_sun_icon.png" class="ship-icon"
@@ -56,7 +56,7 @@
                     <button class="arrow up" data-unit="war_sun">▲</button>
                     <button class="arrow down" data-unit="war_sun">▼</button>
                 </div>
-                <span class="unit-count" id="war_sun-count">0</span>
+                <span class="unit-count" id="fleet-war_sun-count">0</span>
             </div>
             <div class="unit-row" data-unit="flagship">
                 <span class="unit-icon"><img src="/static/images/ships/flagship_icon.png" class="ship-icon"
@@ -65,7 +65,7 @@
                     <button class="arrow up" data-unit="flagship">▲</button>
                     <button class="arrow down" data-unit="flagship">▼</button>
                 </div>
-                <span class="unit-count" id="flagship-count">0</span>
+                <span class="unit-count" id="fleet-flagship-count">0</span>
             </div>
         </div>
     </div>
